create vm in aws and file transfer manually

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: minimal
 if: head_branch =~ ^ft_automation$ OR branch = ft_automation
+
+services:
+    - docker
+
+before_install:
+
+script:
+    # - SSH into AWS VM
