update token env var for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ branches:
     - ft-automation-update
 
 env:
-  - tf_version=0.12.19 tf_init_cli_options="-input=false" tf_validation_cli_options="" tf_plan_cli_options="-lock=false -input=false" tf_apply_cli_options="-auto-approve -input=false" gitlab-read-token="$gitlab-read-token"
+  - tf_version=0.12.19 tf_init_cli_options="-input=false" tf_validation_cli_options="" tf_plan_cli_options="-lock=false -input=false" tf_apply_cli_options="-auto-approve -input=false"
 
 before_install:
   - wget https://releases.hashicorp.com/terraform/"$tf_version"/terraform_"$tf_version"_linux_amd64.zip
   - unzip terraform_"$tf_version"_linux_amd64.zip
   - sudo mv terraform /usr/local/bin/
   - rm terraform_"$tf_version"_linux_amd64.zip
-  - curl --header "PRIVATE-TOKEN: $(gitlab-read-token)" https://gitlab.com/api/v4/projects/21602352/repository/files/ec-file-transfer.tfvars/raw?ref=master -o /usr/ec-file-transfer.tfvars
+  - curl --header "PRIVATE-TOKEN: $gitlabreadtoken" https://gitlab.com/api/v4/projects/21602352/repository/files/ec-file-transfer.tfvars/raw?ref=master -o /usr/ec-file-transfer.tfvars
 
 jobs:
     include:
