--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ before_install:
   - pwd && ls -l
   - sudo mv terraform-input/ec-file-transfer.tfvars /usr/ec-file-transfer.tfvars
   - ls -l /usr/
+  - export AWS_ACCESS_KEY_ID=$AWSACCESKEYID
+  - export AWS_SECRET_ACCESS_KEY=$AWSSECRETKEYID
+  - export AWS_DEFAULT_REGION=$AWSREGION
 
 jobs:
     include:
