--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,11 @@ before_install:
   - export AWS_ACCESS_KEY_ID=$AWSACCESKEYID
   - export AWS_SECRET_ACCESS_KEY=$AWSSECRETKEYID
   - export AWS_DEFAULT_REGION=$AWSREGION
+  - export ARM_CLIENT_ID=$AZUSER
+  - export ARM_CLIENT_SECRET=$AZPWD
+  - export ARM_SUBSCRIPTION_ID=$AZSUBSCRIPTIONID
+  - export ARM_TENANT_ID=$AZTENANTID
   - curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-  - az login --service-principal -u $AZUSER -p $AZPWD --tenant $AZTENANTID
 
 jobs:
     include:
