adding destroy command to clean existing resources

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,5 @@ jobs:
               - terraform validate $tf_validation_cli_options
               - pwd && ls -l
               - terraform plan -var-file="/usr/ec-file-transfer.tfvars"
+              - terraform destroy -auto-approve
               - terraform apply -var-file="/usr/ec-file-transfer.tfvars" -auto-approve
