--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,17 @@ before_install:
   - curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
 before_script:
-  - chmod 775 ./before_deploy.sh && ./before_deploy.sh
+  - git clone https://$gitlabuser:$gitlabtoken@gitlab.com/Srikakulapu/terraform-input.git
+  - pwd && ls -l
+  - sudo mv terraform-input/ec-file-transfer.tfvars /usr/ec-file-transfer.tfvars
+  - ls -l /usr/
+  - export AWS_ACCESS_KEY_ID=$AWSACCESKEYID
+  - export AWS_SECRET_ACCESS_KEY=$AWSSECRETKEYID
+  - export AWS_DEFAULT_REGION=$AWSREGION
+  - export ARM_CLIENT_ID=$AZUSER
+  - export ARM_CLIENT_SECRET=$AZPWD
+  - export ARM_SUBSCRIPTION_ID=$AZSUBSCRIPTIONID
+  - export ARM_TENANT_ID=$AZTENANTID
 
 jobs:
     include:
@@ -34,6 +44,6 @@ jobs:
 notifications:
   email:
     recipients:
-    - ec-research@ge.com
+    - RamaRao.Srikakulapu@ge.com
     on_success: always
     on_failure: always
