deleted refactored script and email addr change

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,6 @@ jobs:
 notifications:
   email:
     recipients:
-    - RamaRao.Srikakulapu@ge.com
+    - ec-research@ge.com
     on_success: always
     on_failure: always
